# iot-controller

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  iot_controller.py  pyproject.toml  requirements.txt
config/: config.json  logging.json  secrets.json
sample_config/: config.json  logging.json
src/iot_controller/: __init__.py  config.py  logic.py  p110.py  routes.py
src/logger/: __init__.py
tests/: test_iot_controller.py
